crates/hana_diegetic/tests/trybuild/fail/overlay_direction.rs
use hana_diegetic::Direction;
use hana_diegetic::El;

fn main() {
    let _ = El::overlay().direction(Direction::TopToBottom);
}
