crates/hana_diegetic/tests/trybuild/fail/overlay_direction.stderr
error[E0599]: no method named `direction` found for struct `El<L>` in the current scope
 --> tests/trybuild/fail/overlay_direction.rs:5:27
  |
5 |     let _ = El::overlay().direction(Direction::TopToBottom);
  |                           ^^^^^^^^^ method not found in `El<Overlay>`
